# hyprsaver

./: BENCHMARK-0.4.0.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PKGBUILD  README.md  build.rs  config.example.toml  deny.toml  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARK_0.4.3.md  BENCHMARK_0.4.4.md  backlog.md  benchmark-v0.4.4.md  changelog-v0.4.4.md  dependency-audit-v0.4.4.md
examples/: config.toml  hypridle.conf  hyprland.conf  hyprsaver.toml  palette_test.frag
shaders/: attitude.frag  aurora.frag  aurora_sphere.frag  bezier.frag  blob.frag  caustics.frag  circuit.frag  clouds.frag  core.frag  corridor.frag  df32_nuclear_test.frag  donut.frag  fire.frag  fireflies.frag  flames.frag  flow_field.frag  fractaltrap.frag  geometry.frag  gridfly.frag  gridfly2.frag  gridfly3.frag  gridfly4.frag  gridwave.frag  hypercube.frag  julia.frag  kaleidoscope.frag  lattice.frag  lissajous.frag  mandelbrot.frag  mandelbrot_deep.frag  marble.frag  matrix.frag  mobius.frag  network.frag  oscilloscope.frag  pipes.frag  planet.frag  plasma.frag  raymarcher.frag  shipburn.frag  (+13 more)
src/: config.rs  cycle.rs  headless_egl.rs  main.rs  mandelbrot_deep.rs  palette.rs  preview.rs  render_gif.rs  render_preview.rs  renderer.rs  shaders.rs  shuffle.rs  wayland.rs
